force-app/main/default/objects/Competitor_DMO__dlm/fields/brand__c.field-meta.xml
<CustomField>
    <fullName>brand__c</fullName>
    <label>brand</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>brand</labelOverride>
        <masterLabel>brand</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>