force-app/main/default/objects/Competitor_DMO__dlm/fields/competitor_name__c.field-meta.xml
<CustomField>
    <fullName>competitor_name__c</fullName>
    <label>competitor_name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>competitor_name</labelOverride>
        <masterLabel>competitor_name</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>