force-app/main/default/objects/Competitor_DMO__dlm/fields/distance_to_nearest_site_m__c.field-meta.xml
<CustomField>
    <fullName>distance_to_nearest_site_m__c</fullName>
    <label>distance_to_nearest_site_m</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>distance_to_nearest_site_m</labelOverride>
        <masterLabel>distance_to_nearest_site_m</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>