force-app/main/default/objects/Competitor_DMO__dlm/fields/KQ_competitor_name__c.field-meta.xml
<CustomField>
    <fullName>KQ_competitor_name__c</fullName>
    <label>Key Qualifier competitor_name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier competitor_name</labelOverride>
        <masterLabel>Key Qualifier competitor_name</masterLabel>
        <refAttrDeveloperName>KQ_competitor_name</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>