force-app/main/default/objects/Competitor_DMO__dlm/fields/max_regional_competitors__c.field-meta.xml
<CustomField>
    <fullName>max_regional_competitors__c</fullName>
    <label>max_regional_competitors</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>max_regional_competitors</labelOverride>
        <masterLabel>max_regional_competitors</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>